# bevy_breakout

./: README.md
breakout/: Cargo.toml
breakout/assets/blender/ball/: ball.blend  ball.blend1
breakout/assets/blender/ball/export/: ball.gltf
breakout/assets/blender/block/: block.blend
breakout/assets/blender/block/export/: block.gltf
breakout/assets/blender/board/: board.blend  board.blend1
breakout/assets/blender/board/export/: board.gltf
breakout/assets/blender/cube/: cube.blend
breakout/assets/blender/paddle/: paddle.blend  paddle.blend1
breakout/assets/blender/paddle/export/: paddle.gltf
breakout/assets/blender/test_cube/: test_cube.blend
breakout/assets/blender/test_cube/export/: test_cube.gltf
breakout/assets/blender/top_wall/: top_wall.blend  top_wall.blend1
breakout/assets/blender/top_wall/export/: top_wall.glb  top_wall.gltf
breakout/assets/blender/wall/: wall.blend  wall.blend1
breakout/assets/blender/wall/export/: wall.glb  wall.gltf
breakout/src/: main.rs
