[package]
name = "breakout"
version = "0.1.0"
authors = ["Victor <victor.r.rogers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_rapier3d = "0.1.1"
